--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a class="nav-link" href="">HOME</a>
             <a class="nav-link" href="">TRENDING NOW</a>
             <a class="nav-link" href="">
-                 <img id="logo" src="images/logo4.png" alt="attire guru logo" srcset="">
+                 <img id="logo" src="images/logo.png" alt="attire guru logo" srcset="">
             </a>
             <a class="nav-link" href="">CONTACT</a>
             <a class="nav-link" href="">ABOUT US</a>
