--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <model-viewer src="assets/twopiece.glb" alt="model" auto-rotate camera-controls ar ios-src="assets/2piece.glb"></model-viewer>
         </div>
         <div id="model3" class="model">
-            <model-viewer src="assets/2pieces.glb" alt="model" auto-rotate camera-controls ar ios-src="2pieces/man.glb"></model-viewer>
+            <model-viewer src="assets/twopiece.glb" alt="model" auto-rotate camera-controls ar ios-src="2pieces/man.glb"></model-viewer>
         </div>
     </div>
     <div id="footer">
